feat: lab 2 complete